'new Double' is deprecated.